--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -596,6 +596,11 @@ spec:
                                       maxItems: 9
                                       type: array
                                       x-kubernetes-list-type: set
+                                      x-kubernetes-validations:
+                                      - message: AllowMethods cannot contain '*' alongside
+                                          other methods
+                                        rule: (self.contains('*') && self.size() >
+                                          1)
                                     allowOrigins:
                                       description: |-
                                         AllowOrigins indicates whether the response can be shared with requested
@@ -1819,6 +1824,10 @@ spec:
                                 maxItems: 9
                                 type: array
                                 x-kubernetes-list-type: set
+                                x-kubernetes-validations:
+                                - message: AllowMethods cannot contain '*' alongside
+                                    other methods
+                                  rule: (self.contains('*') && self.size() > 1)
                               allowOrigins:
                                 description: |-
                                   AllowOrigins indicates whether the response can be shared with requested
@@ -4214,6 +4223,11 @@ spec:
                                       maxItems: 9
                                       type: array
                                       x-kubernetes-list-type: set
+                                      x-kubernetes-validations:
+                                      - message: AllowMethods cannot contain '*' alongside
+                                          other methods
+                                        rule: (self.contains('*') && self.size() >
+                                          1)
                                     allowOrigins:
                                       description: |-
                                         AllowOrigins indicates whether the response can be shared with requested
@@ -5437,6 +5451,10 @@ spec:
                                 maxItems: 9
                                 type: array
                                 x-kubernetes-list-type: set
+                                x-kubernetes-validations:
+                                - message: AllowMethods cannot contain '*' alongside
+                                    other methods
+                                  rule: (self.contains('*') && self.size() > 1)
                               allowOrigins:
                                 description: |-
                                   AllowOrigins indicates whether the response can be shared with requested
