--- a/geps/gep-713/metadata.yaml
+++ b/geps/gep-713/metadata.yaml
@@ -2,7 +2,7 @@ apiVersion: internal.gateway.networking.k8s.io/v1alpha1
 kind: GEPDetails
 number: 713
 name: Metaresources and Policy Attachment
-status: Standard
+status: Memorandum
 authors:
   - youngnick
   - robscott
