fix: validate that a method and a wildcard won't appear together (#3667)
* fix: validate that a method and a wildcard won't appear together

* fix: use `in` instead of `includes`

--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -596,6 +596,10 @@ spec:
                                       maxItems: 9
                                       type: array
                                       x-kubernetes-list-type: set
+                                      x-kubernetes-validations:
+                                      - message: AllowMethods cannot contain '*' alongside
+                                          other methods
+                                        rule: '!(''*'' in self && self.size() > 1)'
                                     allowOrigins:
                                       description: |-
                                         AllowOrigins indicates whether the response can be shared with requested
@@ -1819,6 +1823,10 @@ spec:
                                 maxItems: 9
                                 type: array
                                 x-kubernetes-list-type: set
+                                x-kubernetes-validations:
+                                - message: AllowMethods cannot contain '*' alongside
+                                    other methods
+                                  rule: '!(''*'' in self && self.size() > 1)'
                               allowOrigins:
                                 description: |-
                                   AllowOrigins indicates whether the response can be shared with requested
@@ -4214,6 +4222,10 @@ spec:
                                       maxItems: 9
                                       type: array
                                       x-kubernetes-list-type: set
+                                      x-kubernetes-validations:
+                                      - message: AllowMethods cannot contain '*' alongside
+                                          other methods
+                                        rule: '!(''*'' in self && self.size() > 1)'
                                     allowOrigins:
                                       description: |-
                                         AllowOrigins indicates whether the response can be shared with requested
@@ -5437,6 +5449,10 @@ spec:
                                 maxItems: 9
                                 type: array
                                 x-kubernetes-list-type: set
+                                x-kubernetes-validations:
+                                - message: AllowMethods cannot contain '*' alongside
+                                    other methods
+                                  rule: '!(''*'' in self && self.size() > 1)'
                               allowOrigins:
                                 description: |-
                                   AllowOrigins indicates whether the response can be shared with requested
