Remove old BackendTrafficPolicies YAMLs
and fix some small things.

Signed-off-by: Nick Young <nick@isovalent.com>

--- a/config/crd/experimental/gateway.networking.x-k8s.io_xbackendtrafficpolicies.yaml
+++ b/config/crd/experimental/gateway.networking.x-k8s.io_xbackendtrafficpolicies.yaml
@@ -18,7 +18,7 @@ spec:
     listKind: XBackendTrafficPolicyList
     plural: xbackendtrafficpolicies
     shortNames:
-    - btrafficpolicy
+    - xbtrafficpolicy
     singular: xbackendtrafficpolicy
   scope: Namespaced
   versions:
