--- a/config/crd/experimental/gateway.networking.x-k8s.io_xbackendtrafficpolicies.yaml
+++ b/config/crd/experimental/gateway.networking.x-k8s.io_xbackendtrafficpolicies.yaml
@@ -6,19 +6,32 @@ metadata:
     gateway.networking.k8s.io/bundle-version: v1.2.1
     gateway.networking.k8s.io/channel: experimental
   creationTimestamp: null
-  name: backendtrafficpolicies.gateway.networking.k8s.io
+  labels:
+    gateway.networking.k8s.io/policy: Direct
+  name: xbackendtrafficpolicies.gateway.networking.x-k8s.io
 spec:
-  group: gateway.networking.k8s.io
+  group: gateway.networking.x-k8s.io
   names:
-    kind: BackendTrafficPolicy
-    listKind: BackendTrafficPolicyList
-    plural: backendtrafficpolicies
-    singular: backendtrafficpolicy
+    categories:
+    - gateway-api
+    kind: XBackendTrafficPolicy
+    listKind: XBackendTrafficPolicyList
+    plural: xbackendtrafficpolicies
+    shortNames:
+    - xbtrafficpolicy
+    singular: xbackendtrafficpolicy
   scope: Namespaced
   versions:
-  - name: v1alpha2
+  - additionalPrinterColumns:
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
+        description: |-
+          XBackendTrafficPolicy defines the configuration for how traffic to a
+          target backend should be handled.
         properties:
           apiVersion:
             description: |-
@@ -40,17 +53,40 @@ spec:
           spec:
             description: Spec defines the desired state of BackendTrafficPolicy.
             properties:
-              retry:
+              retryConstraint:
                 description: |-
-                  Retry defines the configuration for when to retry a request to a target
-                  backend.
+                  RetryConstraint defines the configuration for when to allow or prevent
+                  further retries to a target backend, by dynamically calculating a 'retry
+                  budget'. This budget is calculated based on the percentage of incoming
+                  traffic composed of retries over a given time interval. Once the budget
+                  is exceeded, additional retries will be rejected.
 
-                  Implementations SHOULD retry on connection errors (disconnect, reset, timeout,
-                  TCP failure) if a retry stanza is configured.
+                  For example, if the retry budget interval is 10 seconds, there have been
+                  1000 active requests in the past 10 seconds, and the allowed percentage
+                  of requests that can be retried is 20% (the default), then 200 of those
+                  requests may be composed of retries. Active requests will only be
+                  considered for the duration of the interval when calculating the retry
+                  budget. Retrying the same original request multiple times within the
+                  retry budget interval will lead to each retry being counted towards
+                  calculating the budget.
+
+                  Configuring a RetryConstraint in BackendTrafficPolicy is compatible with
+                  HTTPRoute Retry settings for each HTTPRouteRule that targets the same
+                  backend. While the HTTPRouteRule Retry stanza can specify whether a
+                  request will be retried, and the number of retry attempts each client
+                  may perform, RetryConstraint helps prevent cascading failures such as
+                  retry storms during periods of consistent failures.
+
+                  After the retry budget has been exceeded, additional retries to the
+                  backend MUST return a 503 response to the client.
+
+                  Additional configurations for defining a constraint on retries MAY be
+                  defined in the future.
 
                   Support: Extended
                 properties:
                   budgetInterval:
+                    default: 10s
                     description: |-
                       BudgetInterval defines the duration in which requests will be considered
                       for calculating the budget for retries.
@@ -58,20 +94,36 @@ spec:
                       Support: Extended
                     pattern: ^([0-9]{1,5}(h|m|s|ms)){1,4}$
                     type: string
+                    x-kubernetes-validations:
+                    - message: budgetInterval can not be greater than one hour or
+                        less than one second
+                      rule: '!(duration(self) < duration(''1s'') || duration(self)
+                        > duration(''1h''))'
                   budgetPercent:
+                    default: 20
                     description: |-
                       BudgetPercent defines the maximum percentage of active requests that may
                       be made up of retries.
 
                       Support: Extended
+                    maximum: 100
+                    minimum: 0
                     type: integer
                   minRetryRate:
+                    default:
+                      count: 10
+                      interval: 1s
                     description: |-
                       MinRetryRate defines the minimum rate of retries that will be allowable
                       over a specified duration of time.
 
-                      Ensures that requests can still be retried during periods of low
-                      traffic.
+                      The effective overall minimum rate of retries targeting the backend
+                      service may be much higher, as there can be any number of clients which
+                      are applying this setting locally.
+
+                      This ensures that requests can still be retried during periods of low
+                      traffic, where the budget for retries may be calculated as a very low
+                      value.
 
                       Support: Extended
                     properties:
@@ -80,15 +132,21 @@ spec:
                           Count specifies the number of requests per time interval.
 
                           Support: Extended
+                        maximum: 1000000
+                        minimum: 1
                         type: integer
                       interval:
                         description: |-
                           Interval specifies the divisor of the rate of requests, the amount of
-                          time during which the given count of requests occr.
+                          time during which the given count of requests occur.
 
                           Support: Extended
                         pattern: ^([0-9]{1,5}(h|m|s|ms)){1,4}$
                         type: string
+                        x-kubernetes-validations:
+                        - message: interval can not be greater than one hour
+                          rule: '!(duration(self) == duration(''0s'') || duration(self)
+                            > duration(''1h''))'
                     type: object
                 type: object
               sessionPersistence:
@@ -182,10 +240,13 @@ spec:
                     || self.cookieConfig.lifetimeType != ''Permanent'' || has(self.absoluteTimeout)'
               targetRefs:
                 description: |-
-                  TargetRef identifies an API object to apply policy to.
-                  Currently, Backends (i.e. Service, ServiceImport, or any
-                  implementation-specific backendRef) are the only valid API
-                  target references.
+                  TargetRefs identifies API object(s) to apply this policy to.
+                  Currently, Backends (A grouping of like endpoints such as Service,
+                  ServiceImport, or any implementation-specific backendRef) are the only
+                  valid API target references.
+
+                  Currently, a TargetRef can not be scoped to a specific port on a
+                  Service.
                 items:
                   description: |-
                     LocalPolicyTargetReference identifies an API object to apply a direct or
@@ -527,6 +588,8 @@ spec:
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
 status:
   acceptedNames:
     kind: ""
