--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -117,8 +117,11 @@ nav:
       - HTTPRoute: api-types/httproute.md
       - Policy:
         - BackendTLSPolicy: api-types/backendtlspolicy.md
+        - BackendTrafficPolicy: api-types/backendtrafficpolicy.md
       - ReferenceGrant: api-types/referencegrant.md
-    - API specification: reference/spec.md
+    - API specification:
+      - Standard: reference/spec.md
+      - Experimental: reference/specx.md
     - Policy Attachment: reference/policy-attachment.md
   - Enhancements:
     - Overview: geps/overview.md
@@ -129,7 +132,6 @@ nav:
     - Implementable:
       - geps/gep-91/index.md
       - geps/gep-3567/index.md
-      - geps/gep-3388/index.md
     - Experimental:
       - geps/gep-995/index.md
       - geps/gep-1619/index.md
@@ -141,6 +143,7 @@ nav:
       - geps/gep-2162/index.md
       - geps/gep-2649/index.md
       - geps/gep-3155/index.md
+      - geps/gep-3388/index.md
       - geps/gep-3567/index.md
     - Standard:
       - geps/gep-709/index.md
