Add 1.3 release team and update relevant GEPs
Signed-off-by: Nick Young <nick@isovalent.com>

--- a/geps/gep-1767/metadata.yaml
+++ b/geps/gep-1767/metadata.yaml
@@ -5,3 +5,11 @@ name: CORS Filter
 status: Experimental
 authors:
   - lianglli
+  - robscott
+  - EyalPazz
+references:
+  - https://github.com/kubernetes-sigs/gateway-api/pull/3435
+  - https://github.com/kubernetes-sigs/gateway-api/pull/3637
+  - https://github.com/kubernetes-sigs/gateway-api/pull/3656
+  - https://github.com/kubernetes-sigs/gateway-api/pull/3668
+
