--- a/geps/gep-696/metadata.yaml
+++ b/geps/gep-696/metadata.yaml
@@ -29,6 +29,7 @@ relationships:
 references: {}
 # featureNames is a list of the feature names introduced by the GEP, if there
 # are any. This will allow us to track which feature was introduced by which GEP.
+# This is the value added to supportedFeatures and the conformance tests, in string form.
 featureNames: {}
 # changelog is a list of hyperlinks to PRs that make changes to the GEP, in
 # ascending date order.
