--- a/geps/gep-3388/metadata.yaml
+++ b/geps/gep-3388/metadata.yaml
@@ -26,7 +26,12 @@ relationships:
   seeAlso: {}
 # references is a list of hyperlinks to relevant external references.
 # It's intended to be used for storing GitHub discussions, Google docs, etc.
-references: {}
+references:
+  - https://github.com/kubernetes-sigs/gateway-api/pull/3607
+  - https://github.com/kubernetes-sigs/gateway-api/pull/3488
+  - https://github.com/kubernetes-sigs/gateway-api/pull/3682
+  - https://github.com/kubernetes-sigs/gateway-api/pull/3692
+  - https://github.com/kubernetes-sigs/gateway-api/pull/3695
 # featureNames is a list of the feature names introduced by the GEP, if there
 # are any. This will allow us to track which feature was introduced by which GEP.
 featureNames: {}
