CEL for HTTP header values
Signed-off-by: Norwin Schnyder <norwin.schnyder+github@gmail.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
@@ -545,11 +545,19 @@ spec:
                                             pattern: ^[A-Za-z0-9!#$%&'*+\-.^_\x60|~]+$
                                             type: string
                                           value:
-                                            description: Value is the value of HTTP
-                                              Header to be matched.
+                                            description: |-
+                                              Value is the value of HTTP Header to be matched.
+
+                                              Must consist of printable US-ASCII characters, optionally separated
+                                              by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
                                             type: string
+                                            x-kubernetes-validations:
+                                            - message: must only contain printable
+                                                ASCII characters, optionally separated
+                                                by single tabs or spaces
+                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -620,11 +628,19 @@ spec:
                                             pattern: ^[A-Za-z0-9!#$%&'*+\-.^_\x60|~]+$
                                             type: string
                                           value:
-                                            description: Value is the value of HTTP
-                                              Header to be matched.
+                                            description: |-
+                                              Value is the value of HTTP Header to be matched.
+
+                                              Must consist of printable US-ASCII characters, optionally separated
+                                              by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
                                             type: string
+                                            x-kubernetes-validations:
+                                            - message: must only contain printable
+                                                ASCII characters, optionally separated
+                                                by single tabs or spaces
+                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -828,11 +844,19 @@ spec:
                                             pattern: ^[A-Za-z0-9!#$%&'*+\-.^_\x60|~]+$
                                             type: string
                                           value:
-                                            description: Value is the value of HTTP
-                                              Header to be matched.
+                                            description: |-
+                                              Value is the value of HTTP Header to be matched.
+
+                                              Must consist of printable US-ASCII characters, optionally separated
+                                              by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
                                             type: string
+                                            x-kubernetes-validations:
+                                            - message: must only contain printable
+                                                ASCII characters, optionally separated
+                                                by single tabs or spaces
+                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -903,11 +927,19 @@ spec:
                                             pattern: ^[A-Za-z0-9!#$%&'*+\-.^_\x60|~]+$
                                             type: string
                                           value:
-                                            description: Value is the value of HTTP
-                                              Header to be matched.
+                                            description: |-
+                                              Value is the value of HTTP Header to be matched.
+
+                                              Must consist of printable US-ASCII characters, optionally separated
+                                              by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                             maxLength: 4096
                                             minLength: 1
                                             type: string
+                                            x-kubernetes-validations:
+                                            - message: must only contain printable
+                                                ASCII characters, optionally separated
+                                                by single tabs or spaces
+                                              rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                         required:
                                         - name
                                         - value
@@ -1197,11 +1229,19 @@ spec:
                                       pattern: ^[A-Za-z0-9!#$%&'*+\-.^_\x60|~]+$
                                       type: string
                                     value:
-                                      description: Value is the value of HTTP Header
-                                        to be matched.
+                                      description: |-
+                                        Value is the value of HTTP Header to be matched.
+
+                                        Must consist of printable US-ASCII characters, optionally separated
+                                        by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
                                       type: string
+                                      x-kubernetes-validations:
+                                      - message: must only contain printable ASCII
+                                          characters, optionally separated by single
+                                          tabs or spaces
+                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -1271,11 +1311,19 @@ spec:
                                       pattern: ^[A-Za-z0-9!#$%&'*+\-.^_\x60|~]+$
                                       type: string
                                     value:
-                                      description: Value is the value of HTTP Header
-                                        to be matched.
+                                      description: |-
+                                        Value is the value of HTTP Header to be matched.
+
+                                        Must consist of printable US-ASCII characters, optionally separated
+                                        by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
                                       type: string
+                                      x-kubernetes-validations:
+                                      - message: must only contain printable ASCII
+                                          characters, optionally separated by single
+                                          tabs or spaces
+                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -1478,11 +1526,19 @@ spec:
                                       pattern: ^[A-Za-z0-9!#$%&'*+\-.^_\x60|~]+$
                                       type: string
                                     value:
-                                      description: Value is the value of HTTP Header
-                                        to be matched.
+                                      description: |-
+                                        Value is the value of HTTP Header to be matched.
+
+                                        Must consist of printable US-ASCII characters, optionally separated
+                                        by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
                                       type: string
+                                      x-kubernetes-validations:
+                                      - message: must only contain printable ASCII
+                                          characters, optionally separated by single
+                                          tabs or spaces
+                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
@@ -1552,11 +1608,19 @@ spec:
                                       pattern: ^[A-Za-z0-9!#$%&'*+\-.^_\x60|~]+$
                                       type: string
                                     value:
-                                      description: Value is the value of HTTP Header
-                                        to be matched.
+                                      description: |-
+                                        Value is the value of HTTP Header to be matched.
+
+                                        Must consist of printable US-ASCII characters, optionally separated
+                                        by single tabs or spaces. See: https://tools.ietf.org/html/rfc7230#section-3.2
                                       maxLength: 4096
                                       minLength: 1
                                       type: string
+                                      x-kubernetes-validations:
+                                      - message: must only contain printable ASCII
+                                          characters, optionally separated by single
+                                          tabs or spaces
+                                        rule: self.matches('^[!-~]+([\\t ]?[!-~]+)*$')
                                   required:
                                   - name
                                   - value
